# will-i-qualify

./: .gitignore  LICENSE  README.md  marathon_list.csv  pyproject.toml
will-i-qualify/: app.py  cutoff_calculator.py  find_my_marathon_scraper.py  full_scrape.py  marathon_cleaner.py  marathon_guide_scraper.py  marathon_scraper.py  new_marathons_temp_list.csv  utils.py
will-i-qualify/data/: boston_2024_cleaned.csv  boston_results_2024.csv  bq2023_marathons.csv  bq2024_marathons.csv  bq_cutoffs.csv  bq_windows.csv  find_my_marathon_temp_list.csv  marathon_list.csv  searchable_df.csv  unsearchable_df.csv
