[tool.poetry]
name = "will-i-qualify"
version = "0.1.0"
description = ""
authors = ["Nick Courtney <nickcourtney22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
selenium = "^4.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
